fixing issue with authentication
